Fix bug in WebPluginContainer::isRectTopmost() which gave the incorrect result for a scrolled window. https://bugs.webkit.org/show_bug.cgi?id=80606

Patch by Raymes Khoury <raymes@chromium.org> on 2012-04-16
Reviewed by Darin Fisher.

* src/WebPluginContainerImpl.cpp:
(WebKit::WebPluginContainerImpl::isRectTopmost):

Canonical link: https://commits.webkit.org/101550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114275 268f45cc-cd09-0410-ab3c-d52691b4dbfc